# ethlambda

./: CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE.md
.github/: SECURITY.md
crates/blockchain/: Cargo.toml
crates/blockchain/fork_choice/src/: lib.rs
crates/blockchain/src/: fork_choice_tree.rs  key_manager.rs  lib.rs  metrics.rs  store.rs
crates/blockchain/state_transition/: Cargo.toml
crates/blockchain/state_transition/src/: lib.rs
crates/blockchain/state_transition/tests/: types.rs
crates/blockchain/tests/: common.rs  forkchoice_spectests.rs  signature_spectests.rs
crates/common/crypto/: Cargo.toml
crates/common/crypto/src/: lib.rs
crates/common/test-fixtures/: Cargo.toml
crates/common/test-fixtures/src/: lib.rs
crates/common/types/src/: attestation.rs  block.rs  checkpoint.rs  lib.rs  signature.rs  state.rs
crates/net/p2p/src/req_resp/: codec.rs  handlers.rs  messages.rs
crates/net/rpc/src/: fork_choice.rs  lib.rs
crates/storage/src/: store.rs
crates/storage/src/api/: tables.rs
crates/storage/src/backend/: rocksdb.rs
docs/: metrics.md
docs/infographics/: 3sf-mini-infographic.html
