[package]
name = "ethlambda-blockchain"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
autotests = false

[dependencies]
ethlambda-storage.workspace = true
ethlambda-state-transition.workspace = true
ethlambda-fork-choice.workspace = true
ethlambda-crypto.workspace = true
ethlambda-metrics.workspace = true
ethlambda-types.workspace = true

spawned-concurrency.workspace = true

tokio.workspace = true

thiserror.workspace = true
tracing.workspace = true

hex.workspace = true

[dev-dependencies]
ethlambda-test-fixtures.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
datatest-stable = "0.3.3"
tree_hash = "0.12.0"
ethereum_ssz = "0.10.0"
ethereum_ssz_derive = "0.10.0"
ssz_types = "0.14.0"

[[test]]
name = "forkchoice_spectests"
path = "tests/forkchoice_spectests.rs"
harness = false

[[test]]
name = "signature_spectests"
path = "tests/signature_spectests.rs"
harness = false
