[package]
name = "ethlambda-state-transition"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true
ethlambda-metrics.workspace = true

thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
ethlambda-test-fixtures.workspace = true
serde.workspace = true
serde_json.workspace = true

hex.workspace = true

datatest-stable = "0.3.3"

[[test]]
name = "stf_spectests"
path = "tests/stf_spectests.rs"
harness = false
