[package]
name = "ethlambda-crypto"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ethlambda-types.workspace = true

lean-multisig = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "e4474138487eeb1ed7c2e1013674fe80ac9f3165" }
# rec_aggregation is needed to access the config types (LeanSigPubKey, LeanSigSignature)
# which are not re-exported by lean-multisig
rec_aggregation = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "e4474138487eeb1ed7c2e1013674fe80ac9f3165" }

leansig.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
hex.workspace = true
